--- a/package.json
+++ b/package.json
@@ -1,90 +1,41 @@
 {
-  "_args": [
-    [
-      {
-        "raw": "svg-loader",
-        "scope": null,
-        "escapedName": "svg-loader",
-        "name": "svg-loader",
-        "rawSpec": "",
-        "spec": "latest",
-        "type": "tag"
-      },
-      "/Users/sgraham/Development/SG/daily-scrum/pattern-lib"
-    ]
-  ],
-  "_from": "svg-loader@latest",
-  "_id": "svg-loader@0.0.2",
-  "_inCache": true,
-  "_location": "/svg-loader",
-  "_nodeVersion": "0.12.0",
-  "_npmUser": {
-    "name": "dolbyzerr",
-    "email": "dolby0@gmail.com"
-  },
-  "_npmVersion": "2.5.1",
-  "_phantomChildren": {},
-  "_requested": {
-    "raw": "svg-loader",
-    "scope": null,
-    "escapedName": "svg-loader",
-    "name": "svg-loader",
-    "rawSpec": "",
-    "spec": "latest",
-    "type": "tag"
-  },
-  "_requiredBy": [
-    "#DEV:/",
-    "#USER"
-  ],
-  "_resolved": "https://registry.npmjs.org/svg-loader/-/svg-loader-0.0.2.tgz",
-  "_shasum": "601ab2fdaa1dadae3ca9975b550de92a07e1d92b",
-  "_shrinkwrap": null,
-  "_spec": "svg-loader",
-  "_where": "/Users/sgraham/Development/SG/daily-scrum/pattern-lib",
-  "author": {
-    "name": "Andrei Terentev @dolbyzerr"
-  },
-  "bugs": {
-    "url": "https://github.com/dolbyzerr/svg-loader/issues"
-  },
-  "dependencies": {},
-  "description": "Svg loader for webpack",
-  "devDependencies": {},
-  "directories": {},
-  "dist": {
-    "shasum": "601ab2fdaa1dadae3ca9975b550de92a07e1d92b",
-    "tarball": "https://registry.npmjs.org/svg-loader/-/svg-loader-0.0.2.tgz"
-  },
-  "gitHead": "15a2305876171eba1d213b20843e9e7585f4bb28",
-  "homepage": "https://github.com/dolbyzerr/svg-loader",
-  "keywords": [
-    "svg",
-    "loader",
-    "webpack"
-  ],
+  "name": "svg-parse-loader",
+  "version": "0.1.0",
+  "author": "Sean Graham @sgraham785",
+  "description": "SVG parser for use as webpack loader",
   "licenses": [
     {
       "type": "MIT",
       "url": "http://www.opensource.org/licenses/mit-license.php"
     }
   ],
-  "main": "index.js",
-  "maintainers": [
-    {
-      "name": "dolbyzerr",
-      "email": "dolby0@gmail.com"
-    }
-  ],
-  "name": "svg-loader",
-  "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/dolbyzerr/svg-loader.git"
-  },
+  "main": "dist/index.js",
   "scripts": {
+    "build": "babel src -d dist",
+    "postbuild": "standard --fix dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.2"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:sgraham785/svg-parse-loader.git"
+  },
+  "keywords": [
+    "svg",
+    "loader",
+    "webpack"
+  ],
+  "bugs": {
+    "url": "https://github.com/sgraham785/svg-parse-loader/issues"
+  },
+  "homepage": "https://github.com/sgraham785/svg-parse-loader",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "standard": "^10.0.2"
+  },
+  "babel": {
+    "presets": [
+      "es2016"
+    ]
+  }
 }
